Implement full auth flow: login, logout, context, protected routes, Tailwind polish

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,13 +4,13 @@ FROM python:3.12
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install dependencies
+# Copy only backend requirements and install dependencies
 COPY backend/requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the full project (adjusted for your layout)
-COPY . .
+# Copy only the backend code into the container
+COPY backend/app ./app
 
 # Run the FastAPI app with Uvicorn
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
