--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,12 +5,11 @@ FROM python:3.12
 WORKDIR /app
 
 # Copy only backend requirements and install dependencies
-COPY backend/requirements.txt .
-
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy only the backend code into the container
-COPY backend/app ./app
+# Copy backend app code
+COPY app ./app
 
-# Run the FastAPI app with Uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Run FastAPI app with Uvicorn
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
