--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,29 @@
-version: '3.8'
+# docker-compose.yml
 
 services:
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: stinkie
-      POSTGRES_DB: capecontrol
+  web:
+    build: .
+    container_name: capecntl-app
     ports:
-      - '5432:5432'
+      - "8000:8000"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-  backend:
-    build:
-      context: .
-      dockerfile: backend/Dockerfile
-    volumes:
-      - ./backend:/app
-    ports:
-      - '8000:8000'
+      - .:/app
+    env_file:
+      - .env
     depends_on:
       - db
-    env_file:
-      - ./backend/.env
+
+  db:
+    image: postgres:16
+    container_name: capecntl-db
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - "6543:5432"  # external:internal
 
 volumes:
-  postgres_data:
+  pgdata:
