--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
 "scripts": {
   "dev": "vite",
   "build": "vite build && npm run copy",
-  "copy": "mkdir -p ../backend/app/static && rm -rf ../backend/app/static/* && cp -r dist/* ../backend/app/static/",
+  "copy": "mkdir -p ../backend/app/static && rm -rf ../backend/app/static/* && cp -a dist/. ../backend/app/static/",
   "lint": "eslint .",
   "preview": "vite preview"
 },
