--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,30 @@
-# docker-compose.yml
+version: '3.8'
 
 services:
-  web:
-    build: .
-    container_name: capecntl-app
-    ports:
-      - "8000:8000"
+  devcontainer:
+    build:
+      context: .
+      dockerfile: .devcontainer/Dockerfile
     volumes:
-      - .:/app
-    env_file:
-      - .env
+      - .:/workspace:cached
+    command: /bin/bash
     depends_on:
       - db
+    ports:
+      - "8000:8000"
+      - "3000:3000"
 
   db:
-    image: postgres:16
-    container_name: capecntl-db
+    image: postgres:15
+    restart: always
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: capedb
     ports:
-      - "6543:5432"  # external:internal
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
-  pgdata:
+  postgres-data:
