--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
     "../docker-compose.yml"
   ],
   "service": "devcontainer",
-  "workspaceFolder": "/workspace",
+  "workspaceFolder": "/workspaces/tailstorm",
   "postCreateCommand": "pip install -r requirements.txt && cd client && npm install",
   "forwardPorts": [8000, 3000, 5432],
   "features": {
