--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     ports:
       - "8000:8000"
       - "3000:3000"
-
+    environment:
+      SECRET_KEY: "changeme-in-prod"
   db:
     image: postgres:15
     restart: always
