--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,44 @@
-version: '3.8'
+version: "3.9"
 
 services:
-  devcontainer:
+  backend:
     build:
-      context: .
-      dockerfile: .devcontainer/Dockerfile
+      context: ./backend
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - ../workspace:cached
-    command: /bin/bash
+      - ./backend:/app
+    ports:
+      - "8000:8000"
+    env_file:
+      - ./backend/.env
     depends_on:
       - db
+
+  client:
+    build:
+      context: ./client
+    command: npm run dev
+    volumes:
+      - ./client:/app
+      - /app/node_modules
     ports:
-      - "8000:8000"  # backend FastAPI
-      - "3001:3000"  # 👈 expose frontend container on host:3001 to avoid conflict
+      - "3000:3000"
     environment:
-      SECRET_KEY: "changeme-in-prod"
+      - VITE_API_URL=http://localhost:8000/api
 
   db:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: capedb
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - ./backend/.env
 
 volumes:
-  postgres-data:
+  postgres_data:
