chore: prepare Dockerfile and docker-compose.yml for Heroku deployment and local dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,42 @@
-version: "3.9"
+version: '3.9'
 
 services:
-  backend:
+  web:
     build:
-      context: ./backend
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    volumes:
-      - ./backend:/app
+      context: .
+      dockerfile: Dockerfile
+    container_name: tailstorm-backend
     ports:
       - "8000:8000"
-    env_file:
-      - ./backend/.env
+    environment:
+      PORT: 8000
+      POSTGRES_DB: tailstorm_dev
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      DATABASE_URL: postgres://postgres:postgres@db:5432/tailstorm_dev
+      SECRET_KEY: your-local-secret-key
+      DEBUG: "true"
+      ENV: development
+      API_URL: http://localhost:8000
+      ALLOWED_HOSTS: localhost,127.0.0.1
     depends_on:
       - db
-
-  client:
-    build:
-      context: ./client
-    command: npm run dev
     volumes:
-      - ./client:/app
-      - /app/node_modules
-    ports:
-      - "3000:3000"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api
+      - .:/app
+      - ./client:/app/client
+      - ./backend:/app/backend
 
   db:
     image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    container_name: tailstorm-db
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_DB: tailstorm_dev
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    env_file:
-      - ./backend/.env
 
 volumes:
   postgres_data:
