--- a/.dockerignore
+++ b/.dockerignore
@@ -1,28 +1,37 @@
-# Node dependencies
-node_modules/
+# Byte-compiled / cache
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Virtualenvs
+.venv/
+env/
+venv/
+
+# Environment variables
+.env
+.env.*
+
+# Node modules
+client/node_modules/
 
 # Build output
-dist/
-dist-ssr/
+client/dist/
+backend/app/static/
 
-# Environment files
-.env
-.env.*         # Include any other env variants like .env.local, etc.
+# Logs
+*.log
 
-# Git and editor configs
-.git/
+# IDE/editor files
 .vscode/
 .idea/
-
-# OS and log files
+*.swp
 .DS_Store
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
 
-# Docker-specific overrides
-docker-compose.override.yml
+# Git
+.git
+.gitignore
 
-# Ignore build artifacts (comment clarification)
-*.log
+# Docker-related
+Dockerfile
+.dockerignore
