--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "scripts": {
     "lint": "eslint . --ext .js,.jsx",
-    "format": "prettier --write ."
-  }
+    "format": "prettier --write .",
+    "heroku-postbuild": "cd client && npm install && npm run build"
 }
+
+  }
+
